--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -7,5 +7,6 @@ spec:
   selector:
     app: microservice-crud
   ports:
-  - port: 80
-    targetPort: 3000
+    - protocol: TCP
+      port: 80
+      targetPort: 3000
