--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.11.3",
-    "@as-integrations/fastify": "^2.1.1",
+    "@as-integrations/fastify": "3.0.0",
     "@fastify/cors": "^11.1.0",
     "@nestjs/apollo": "^13.1.0",
     "@nestjs/common": "^11.0.1",
