feat: add environment variable of configuration DB

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 DB_HOST=
 DB_PORT=
-DB_USER=
-DB_PASS=
-DB_NAME=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
+DB_SSLMODE=require
+DB_CHANNEL_BINDING=require
+DB_SSL=
+DB_SCHEMA=
